--- a/comic_site.html
+++ b/comic_site.html
@@ -5,23 +5,47 @@
     <title>comic_site</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+        .circle{
+            width: 50px;
+            height:50px;
+            background-color:rgba(128, 128, 128, 0.396);
+           border-radius: 50%;
+        }
+        .i{
+             text-align: center;
+             padding-right: 5cm;
+        }
+     /* .to_buy{
+        width: 100px;
+        height: 100px;
+        background-color: aquamarine;
+        border-radius:15px ;
+        text-align: right;
+      } */
+  
+  </style>
 </head>
 <body>
-    <head>
+    <header>
         <h1>Site Name</h1>
-    </head>
+    </header>
     <div class="navbar">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Category</a></li>
+            <li><a href="comic_site.html">Home</a></li>
+            <li><a href="../web page/new.html">Category</a></li>
             <li><a href="#">Comic</a></li>
         </ul>
     </div>
     <h2>Hope you enjoy reading</h2>
-   <a href="#" ><img src="bloodborne-video-games-wallpaper-preview.jpg" alt="pi1" width="25%"> <figcaption>vanhelsing</figcaption></a> 
-   <a href="#"> <img src="weapons-guns-van-helsing-hugh-jackman-hugh-jackman-hd-wallpaper-preview.jpg" alt="pic2" width="25%"><figcaption>vanhelsing#2</figcaption></a>
-   <div class="sitelogo"><img src="#" alt="site logo"></div>
-   <div class="to_buy"><h2>TO BUY</h2></div>
+    <div class="circle"><p><div class="i"><h2>i</h2></div></p></div>
+    
+  <span class="images"> 
+   <a id="pic1" href="#" ><img src="bloodborne-video-games-wallpaper-preview.jpg" alt="pi1" width="60%" height="70%"><p>vanhelsing</p></a> 
+   <a id="pic2" href="#"> <img src="weapons-guns-van-helsing-hugh-jackman-hugh-jackman-hd-wallpaper-preview.jpg" alt="pic2" width="60%" height="70%"><figcaption>vanhelsing#2</figcaption></a>
+  </span>
+   <div class="sitelogo"><img src="#" alt="site logo" width="50%"></div>
+   <div class="ovel"><p><div class="to_buy"><h1>TO BUY</h1></div></p></div>
    <div class="contact"><h3>contact or Dm :</h3></div>
    <div class="social_links">
     <a href="https://instagram.com/hemanth_arts7?igshid=MzRlODBiNWFlZA=="><i class="fa fa-instagram" aria-hidden="true">hemanth_arts</i></a>
