--- a/comic_site.html
+++ b/comic_site.html
@@ -46,10 +46,10 @@
   </span>
    <div class="sitelogo"><img src="#" alt="site logo" width="50%"></div>
    <div class="ovel"><p><div class="to_buy"><h1>TO BUY</h1></div></p></div>
-   <div class="contact"><h3>contact or Dm :</h3></div>
+   <div class="back"><div class="contact"><h3>contact or Dm :</h3></div>
    <div class="social_links">
-    <a href="https://instagram.com/hemanth_arts7?igshid=MzRlODBiNWFlZA=="><i class="fa fa-instagram" aria-hidden="true">hemanth_arts</i></a>
-    <a href="https://api.whatsapp.com/send?phone=919849337391"><i class="fa fa-whatsapp" aria-hidden="true">9849337391</i></a>
-   </div>
+    <a id="aa" href="https://instagram.com/hemanth_arts7?igshid=MzRlODBiNWFlZA=="><i class="fa fa-instagram" aria-hidden="true">&nbsp; hemanth_arts</i></a>
+    <a id="ab" href="https://api.whatsapp.com/send?phone=919849337391"><i class="fa fa-whatsapp" aria-hidden="true">&nbsp; 9849337391</i></a>
+   </div></div>
 </body>
 </html>
