--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
        </div>
        <div class="row">
         <div class="column">
-          <img src="/images/download.jpeg" alt="pic 1" style="width:100%">
+          <img src="/download.jpeg" alt="pic 1" style="width:100%">
         </div>
         <div class="column">
-          <img src="/images/images.jpeg" alt="pic 2" style="width:100%">
+          <img src="/images.jpeg" alt="pic 2" style="width:100%">
         </div>
         <div class="column">
-          <img src="/images/images1.png" alt="pic 3" style="width:100%">
+          <img src="/images1.png" alt="pic 3" style="width:100%">
         </div>
       </div>
        
