Added Dot before folder name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 <body>
     <header>
-        <h1>Chitrakatha</h1>
+        <h1>Chitrakatha1</h1>
     </header>
     <ul>
         <li><a href="/NavBar/navbarComic.html"target="_blank">Comics</a></li>
@@ -21,13 +21,13 @@
        </div>
        <div class="row">
         <div class="column">
-          <img  src="/images/download.jpeg" alt="pic 1" style="width:100%">
+          <img src="./images/download.jpeg" alt="pic 1" style="width:100%">
         </div>
         <div class="column">
-          <img src="/images/images.jpeg" alt="pic 2" style="width:100%">
+          <img src="./images/images.jpeg" alt="pic 2" style="width:100%">
         </div>
         <div class="column">
-          <img src="/images/images1.png" alt="pic 3" style="width:100%">
+          <img src="./images/images1.png" alt="pic 3" style="width:100%">
         </div>
       </div>
        
