Updated header name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 <body>
     <header>
-        <h1>Chitrakatha1</h1>
+        <h1>Chitrakatha</h1>
     </header>
     <ul>
         <li><a href="/NavBar/navbarComic.html"target="_blank">Comics</a></li>
