--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
       </ul>
     <main>
-        <div class="sub"><h1>Hope you enjoy reading</h1>
+        <div class="sub"><h1>Hope you are enjoy reading</h1>
         <h1 style="color: #9575cd;">i</h1>
        </div>
        <div class="row">
